<resources>
    <string name="app_name">Music Shop</string>
    <string name="catalogue">Catalogue</string>
    <string name="album">Album</string>
    <string name="wishlist">Wishlist</string>
    <string name="payment">Payment</string>

    <string name="read_more">Read more</string>
    <string name="about_the_album">About the Album</string>
    <string name="go_to_album">Go to album</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="remove_from_wishlist">Remove from wishlist</string>
    <string name="buy">Buy</string>
    <string name="buy_album">Buy album</string>
    <string name="ok">OK</string>

    <string name="catalogue_purpose">"This screen displays a catalogue of albums.\n\nA long press on an album displays a contextual menu giving the user the option of either going to this album, buying it or adding/removing it from the wishlist.\n\nClicking on the Wishlist button will display the wishlist."</string>

    <!-- Wishlist -->
    <string name="wishlist_purpose">This screen displays a list of albums the user has added to the wishlist.\n\nA long press on an album displays a contextual menu giving the user the option of either going to this album, buying it or removing it from the wishlist.\n\nClicking the Catalogue button will bring the user to the Catalogue.</string>
    <string name="wishlist_empty">Wishlist is empty</string>
    <string name="album_already_in_wishlist">Album %1$d is already in the wishlist</string>
    <string name="album_added_to_wishlist">Album %1$d is added to the wishlist</string>
    <string name="album_removed_from_wishlist">Album %1$d is removed from the wishlist</string>

    <!-- Album -->
    <string name="album_purpose">This screen displays the album\'s list of songs. This list is a mockup.\n\nClicking the Read more button will display the album detail, the price button will display the payment screen. And the user can add or remove the album to or from the wishlist, go to the wishlist or the catalogue.</string>
    <string name="album_number">Album %1$d</string>
    <string name="listview_is_mockup">This ListView is a mockup. Song playback is not implemented.</string>

    <!-- Read More -->
    <string name="album_detail">Album %1$d detail</string>
    <string name="read_more_purpose">This screen aims to provide detail about the album.\nThe following fields are a mockup.</string>
    <string name="read_more_about_album">Information about the singer or band, the popularity of the album, etc.</string>
    <string name="read_more_released_on_label">Released on</string>
    <string name="read_more_released_date">Released date (eg. 26 May 2017)</string>
    <string name="read_more_genre_label">Genre</string>
    <string name="read_more_genre">Music genre (eg. Pop, South America, World)</string>
    <string name="read_more_access_type_label">Access type</string>
    <string name="read_more_access_type">Streaming or by download to your computer and/or device</string>
    <string name="read_more_playback_information_label">Playback information</string>
    <string name="read_more_playback_information">Via your favourite music player app, or by exporting MP3 files to your computer and playing on any MP3 compatible music player</string>
    <string name="read_more_copyright_label">Copyright</string>
    <string name="read_more_copyright">Copyright information</string>
    <string name="read_more_file_type_label">File type</string>
    <string name="read_more_file_type">MP3</string>
    <string name="read_more_internet_connection_label">Internet connection</string>
    <string name="read_more_internet_connection">Required for streaming or downloading</string>

    <!-- Payment -->
    <string name="payment_purpose">This screen is about the payment of the selected album. The payment is not implemented.\n\nGoogle Payment API can be used to enable checkout for customers in this app.\n\nThe following steps are required in order to use the Google Payment API:</string>
    <string name="set_up_API_label">1. Set up Google Payment API</string>
    <string name="set_up_API_web">developers.google.com/payments/setup</string>
    <string name="integrate_with_API_label">2. Integrate this app with the Google Payment API</string>
    <string name="integrate_with_API_web">developers.google.com/payments/tutorial</string>
    <string name="test_and_deploy_label">3. Test and deploy</string>
    <string name="test_and_deploy_web">developers.google.com/payments/test-and-deploy</string>

</resources>