<?xml version="1.0" encoding="utf-8"?>

<!-- Layout of ReadMoreActivity -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context="com.oz_heng.apps.android.musicshop.ReadMoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/read_more_purpose"
            style="@style/PurposeTextViewStyle"
            android:text="@string/read_more_purpose" />

        <TextView
            android:id="@+id/read_more_about_album"
            style="@style/TextViewFieldStyle"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/read_more_about_album" />

        <TextView
            style="@style/TextViewLabelFieldStyle"
            android:text="@string/read_more_released_on_label" />

        <TextView
            android:id="@+id/read_more_released_date"
            style="@style/TextViewFieldStyle"
            android:text="@string/read_more_released_date" />

        <TextView
            style="@style/TextViewLabelFieldStyle"
            android:text="@string/read_more_genre_label" />

        <TextView
            android:id="@+id/read_more_genre"
            style="@style/TextViewFieldStyle"
            android:text="@string/read_more_genre" />

        <TextView
            style="@style/TextViewLabelFieldStyle"
            android:text="@string/read_more_access_type_label" />

        <TextView
            android:id="@+id/read_more_access_type"
            style="@style/TextViewFieldStyle"
            android:text="@string/read_more_access_type" />

        <TextView
            style="@style/TextViewLabelFieldStyle"
            android:text="@string/read_more_playback_information_label" />

        <TextView
            android:id="@+id/read_more_playback_information"
            style="@style/TextViewFieldStyle"
            android:text="@string/read_more_playback_information" />

        <TextView
            style="@style/TextViewLabelFieldStyle"
            android:text="@string/read_more_copyright_label" />

        <TextView
            android:id="@+id/read_more_copyright"
            style="@style/TextViewFieldStyle"
            android:text="@string/read_more_copyright" />

        <TextView
            style="@style/TextViewLabelFieldStyle"
            android:text="@string/read_more_file_type_label" />

        <TextView
            android:id="@+id/read_more_file_type"
            style="@style/TextViewFieldStyle"
            android:text="@string/read_more_file_type" />

        <TextView
            style="@style/TextViewLabelFieldStyle"
            android:text="@string/read_more_internet_connection_label" />

        <TextView
            android:id="@+id/read_more_internet_connection"
            style="@style/TextViewFieldStyle"
            android:text="@string/read_more_internet_connection" />

        <Button
            android:id="@+id/read_more_button_ok"
            style="@style/ButtonStyle"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/activity_margin_half"
            android:layout_marginRight="@dimen/activity_margin_half"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/ok" />


    </LinearLayout>


</ScrollView>