<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context="com.oz_heng.apps.android.musicshop.AlbumActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ScrollView style="@style/PurposeScrollViewStyle">

            <TextView
                android:id="@+id/album_purpose"
                style="@style/PurposeTextViewStyle"
                android:text="@string/album_purpose" />

        </ScrollView>

        <LinearLayout style="@style/VerticalButtonsLinearLayoutStyle">

            <Button
                android:id="@+id/album_read_more"
                style="@style/ButtonStyle"
                android:text="@string/read_more" />

            <Button
                android:id="@+id/album_add_to_whishlist"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:text="@string/add_to_wishlist" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout style="@style/HorizontalButtonsLinearLayoutStyle">

        <Button
            android:id="@+id/album_buy"
            style="@style/ButtonStyle"
            android:text="@string/buy" />

        <Button
            android:id="@+id/catalogue"
            style="@style/ButtonStyle"
            android:layout_marginLeft="@dimen/activity_margin_half"
            android:layout_marginStart="@dimen/activity_margin_half"
            android:text="@string/catalogue" />

    </LinearLayout>

    <ListView
        android:id="@+id/album_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_margin"
        android:drawSelectorOnTop="true"
        android:orientation="vertical" />

</LinearLayout>
